# cropper-yield-farming

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
client/utils/: farm.ts  ids.ts
contracts/yield-farming-v1/program/: Cargo.toml
contracts/yield-farming-v1/program/src/: constant.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
contracts/yield-farming-v3/: Anchor.toml  Cargo.toml  package.json  test-keypair.json
contracts/yield-farming-v3/programs/anchor-farm/: Cargo.toml
contracts/yield-farming-v3/programs/anchor-farm/src/: constant.rs  error.rs  instructions.rs  lib.rs  processor.rs  states.rs  utils.rs
contracts/yield-farming-v3/programs/anchor-farm/src/processor/: process_add_reward_dual.rs  process_add_reward_single.rs  process_create_dual.rs  process_create_farm.rs  process_create_global_state.rs  process_deposit.rs  process_extend_dual.rs  process_extend_farm.rs  process_harvest.rs  process_remove_reward_dual.rs  process_withdraw.rs
contracts/yield-farming-v3/tests/: 01_manage_global_state.ts  02_farm_management.ts  03_reward_management.ts  15_limitation_tests.ts  anchor_farm.ts  farm_management.ts  setup.ts  unit-tests.ts  unit-tests.txt  unit_tests_v3.xlsx
contracts/yield-farming/program/: Cargo.toml
contracts/yield-farming/program/src/: constant.rs  error.rs  instruction.rs  processor.rs  state.rs
tests/yield-farming-v1/: README.md  nuxt.config.js  package-lock.json  package.json  tsconfig.json
tests/yield-farming-v1/tests/: main.ts  setup_for_test.ts  test_create_farm.ts  test_deposit.ts
(+33 files in other folders)
